--- a/src/Components/Todo Dashboard/ToDo.css
+++ b/src/Components/Todo Dashboard/ToDo.css
@@ -65,8 +65,6 @@
 
 
 .ToDo-List-Container {
-    border: 1px solid black;
-
     display: flex;
     flex-direction: column;
 
@@ -78,8 +76,6 @@
 }
 
 .Task-Container {
-    border: 1px solid black;
-
     display: flex;
 
     padding: 5px;
@@ -100,6 +96,9 @@
     margin: auto;
 }
 
+
+
+/* Delete Button Start */
 
 .Delete-Task-Button {
     all: unset;
@@ -167,3 +166,5 @@
   transition: 0s;
   transform: translate(0, 5%);
 }
+
+/* Delete Button End */
