--- a/src/Components/Todo Dashboard/ToDo.css
+++ b/src/Components/Todo Dashboard/ToDo.css
@@ -104,71 +104,24 @@
 /* Delete Button Start */
 
 .Delete-Task-Button {
-    all: unset;
-    width: 100px;
-    height: 30px;
-    font-size: 16px;
-    background: transparent;
-    border: none;
-    position: relative;
-    color: #f0f0f0;
+    background-color: #fbeee0;
+    border: 2px solid #422800;
+    border-radius: 30px;
+    box-shadow: #422800 4px 4px 0 0;
+    color: #422800;
     cursor: pointer;
-    z-index: 1;
-    padding: 10px 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 0 15px;
+    line-height: 50px;
+    text-align: center;
+    text-decoration: none;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
 }
 
-.Delete-Task-Button::after,
-.Delete-Task-Button::before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -99999;
-  transition: all .4s;
-}
-
-.Delete-Task-Button::before {
-  transform: translate(0%, 0%);
-  width: 100%;
-  height: 100%;
-  background: #28282d;
-  border-radius: 10px;
-}
-
-.Delete-Task-Button::after {
-  transform: translate(10px, 10px);
-  width: 35px;
-  height: 35px;
-  background: #ffffff15;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border-radius: 50px;
-}
-
-.Delete-Task-Button:hover::before {
-  transform: translate(5%, 20%);
-  width: 110%;
-  height: 110%;
-}
-
-.Delete-Task-Button:hover::after {
-  border-radius: 10px;
-  transform: translate(0, 0);
-  width: 100%;
-  height: 100%;
-}
-
-.Delete-Task-Button:active::after {
-  transition: 0s;
-  transform: translate(0, 5%);
-}
 
 /* Delete Button End */
 
